Cadastro de usuário

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
 
-  <title>Vite + React</title>
+  <title>MedTrack</title>
 </head>
 
 <body>
